# pollinations.ai

./: CHANGELOG.md  IMPORTANT.txt  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml
examples/: README.md  assistant.py  async_image_feed.py  async_stream.py  async_text_feed.py  async_vison_model.py  discord_bot.py  image_feed.py  stream.py  text_feed.py  transcribe_self.py  vison_model.py
examples/image_model/: advanced.md  async.md  basic.md  loop.md  models.md
examples/multi_model/: advanced.md  basic.md  loop.md
examples/smart_model/: advanced.md  basic.md  loop.md
examples/text_model/: advanced.md  async.md  basic.md  image.md  loop.md  models.md
pollinations/: __init__.py  _constants.py  _types.py  cli.py  models.py
pollinations.ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pollinations/abc/: __init__.py  imageprotocol.py  textprotocol.py
pollinations/ai/: __init__.py
pollinations/core/: image.py  text.py
pollinations/ext/: __init__.py
pollinations/models/: imagemodel.py
pollinations/types/: ImageModel.py  ImageObject.py  TextModel.py  TextObject.py
pollinations/utils/: _image.py  _models.py  _request.py  _safe.py
src/pollinations/: __init__.py  cli.py  version.py
src/pollinations/_core/: __init__.py  _base_class.py  _client.py  _consts.py  _get_feed_request.py  _get_image_request.py  _get_stream_request.py  _get_text_request.py  _get_transcribe_request.py
src/pollinations/_utils/: _check_file.py  _clean_params.py  _create_message.py  _encode_string.py  _models.py  _prepare_request.py  _stream_process.py  check_file.py  create_message.py  format_image.py  read_image.py  to_pil.py
src/pollinations/core/: feed.py  image.py  text.py
src/pollinations/errors/: __init__.py  empty_file_error.py  failed_to_stream.py  failed_to_transcribe.py  file_not_found.py  improper_permissions.py  invalid_or_unkown_prompt.py  not_a_file.py
src/pollinations/helpers/: __init__.py  version_check.py
src/pollinations/types/: __init__.py  aliases.py  httpx.py  model.py  payload.py
