[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pollinations"
version = "2.3.5"
description = "pollinations.ai | Free AI Text & Image Generation"
readme = "README.md"
authors = [{ name = "pollinations.ai", email = "hello@pollinations.ai" }, { name = "git.pollinations.ai", email = "git.pollinations.ai@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Natural Language :: English"
]
keywords = ["pollinations", "pollinations.ai", "pollinations-ai", "pollinations_ai", "ai", "api", "sdk", "wrapper", "free"]
requires-python = ">=3.7.0"
dependencies = ["chardet", "aiohttp"]

[project.urls]
Website = 'https://pollinations.ai/'
Discord = 'https://discord.gg/8HqSRhJVxn'
Github = 'https://github.com/pollinations'
Repository = 'https://github.com/pollinations-ai/pollinations.ai'
YouTube = 'https://www.youtube.com/channel/UCk4yKnLnYfyUmCCbDzOZOug'
Instagram = 'https://instagram.com/pollinations_ai'
Twitter = 'https://twitter.com/pollinations_ai'
